# generative_ecs_2

./: Cargo.toml
examples/: gen.rs  target.rs
src/: arenas.rs  entities.rs  lib.rs  lifespans.rs  lifetimes.rs  worlds.rs
src/ecs/: allocators.rs  components.rs  ids.rs  maps.rs  mod.rs
