[package]
name = "generative_ecs_2"
version = "0.1.0"
authors = ["Fraser Balch <farseer.ulwithy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
code_gen = { git = "https://github.com/frsrblch/code_gen" }
bit-set = "0.5.1"
rayon = "1.3.0"